# ToneDock

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  build.rs  dev.ps1
docs/: guitar_vst_host_requirements.md  handover.md  inline_gui_spec.md  node_based_routing_design.md  rust_vst_host_license_audit.md  vst3_hosting_notes.md
locales/: en.json  ja.json
src/: app.rs  crash_logger.rs  i18n.rs  looper.rs  main.rs  metronome.rs  session.rs  undo.rs
src/app/: commands.rs  dialogs.rs  midi_handler.rs  mod.rs  rack.rs  rack_view.rs  session.rs  templates.rs  toolbar.rs  transport.rs
src/audio/: chain.rs  engine.rs  graph.rs  graph_command.rs  mod.rs  node.rs
src/audio/engine/: backing_track.rs  device.rs  graph_commands.rs  helpers.rs  input_fifo.rs  mod.rs  serialization.rs  tests.rs  undo.rs
src/audio/graph/: mod.rs  process.rs  processors.rs  processors_special.rs  state.rs  tests.rs  topology.rs
src/midi/: mapping.rs  mod.rs
src/ui/: audio_settings.rs  controls.rs  meters.rs  mod.rs  node_editor.rs  preferences.rs  rack_view.rs  theme.rs
src/ui/node_editor/: geometry.rs  hit_test.rs  interaction.rs  mod.rs  render.rs
src/ui/preferences/: audio_tab.rs  midi_tab.rs  mod.rs  plugins_tab.rs
src/vst_host/: editor.rs  mod.rs  plugin.rs  scanner.rs  seh_wrapper.c
src/vst_host/editor/: host_frame.rs  mod.rs  win32.rs
src/vst_host/plugin/: attributes.rs  host_impl.rs  mod.rs  parameters.rs  processing.rs  seh_ffi.rs  tests.rs
