[package]
name = "tonedock"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A guitar practice VST3 host application"

[dependencies]
vst3 = "0.3"
cpal = { version = "0.15", features = ["asio"] }
asio-sys = "0.2"
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
anyhow = "1"
rfd = "0.15"
midi-msg = "0.7"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
libloading = "0.8"

[features]
default = ["asio"]
asio = ["cpal/asio"]
