[package]
name = "tonedock"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A guitar practice VST3 host application"

[dependencies]
vst3 = "0.3"
cpal = { version = "0.15", features = ["asio"] }
asio-sys = "0.2"
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
parking_lot = "0.12"
anyhow = "1"
rfd = "0.15"
midi-msg = "0.7"
crossbeam-channel = "0.5"
arc-swap = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
raw-window-handle = "0.6"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "isomp4", "aac"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }
midir = "0.10.3"
sys-locale = "0.3"
hound = "3.5.1"

[features]
default = ["asio"]
asio = ["cpal/asio"]

[build-dependencies]
cc = "1"
